# ultracivic-backend

./: .dockerignore  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  KYC_SETUP_GUIDE.md  Procfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_flow.sh  test_render_auth.sh
.github/workflows/: ci.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_stripe_session_id.py  003_add_session_table.py  004_add_payment_models.py  3d599298048c_init_users_table.py  8783b7000d19_add_superuser_and_verified_flags.py  b78842a8be4a_add_magic_link_table_for_passwordless_.py
app/: main.py
app/auth/: __init__.py  dependencies.py  magic_link.py  magic_link_router.py  session.py
app/core/: config.py  email.py
app/db/: __init__.py
app/kyc/: __init__.py
app/models/: __init__.py  magic_link.py  payment.py  session.py  user.py
app/payments/: __init__.py
tests/: __init__.py  test_basic.py
ultracivic_backend/: __init__.py
