[tool.poetry]
name = "ultracivic-backend"
version = "0.1.0"
description = "Ultra Civic backend API"
authors = ["Francisco del Villar <delvillarfr@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ultracivic_backend"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
pytest = "^8.4.0"

