[project]
name = "ultracivic-backend"
version = "0.1.0"
description = "Ultra Civic backend API"
authors = [
    {name = "Francisco del Villar", email = "delvillarfr@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "alembic (>=1.16.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi-users[jwt,sqlmodel] (>=14.0.1,<15.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "stripe (>=12.2.0,<13.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi-users-db-sqlmodel (>=0.3.0,<0.4.0)",
    "fastapi-users-db-sqlalchemy (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ultracivic-backend"
version = "0.1.0"
description = "Ultra Civic backend API"
authors = ["Francisco del Villar <delvillarfr@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
pytest = "^8.4.0"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
httpx = "^0.28.1"

